fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ main {
 
 .content-section {
     background-color: white;
-    padding: 10px 120px;
+    padding: 30px 20px;
     font-size: 24px;
     max-width: 1200px;
     margin: 0 auto;
@@ -299,5 +299,13 @@ main {
         margin: 5px 0;
         margin-left: 0;
     }
-
+    
+    .content-section {
+        padding: 20px;
+        font-size: 20px;
+    }
+    
+    .video-container {
+        padding: 10px;
+    }
 }
